--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-legacy/audios/
-
+legacy/audios
 legacy/youtube_data_api_v3_key.txt
 
-node_modules
+public/audios
 
 # ignore for vue cli
 .DS_Store
