--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ legacy/audios
 legacy/youtube_data_api_v3_key.txt
 
 public/audios
+public/youtube_data_api_v3_key.txt
 
 # ignore for vue cli
 .DS_Store
